ajout d'une intro combinatoire et sur la combinatoire de l'arrangement de tresse

--- a/paper/Poissons.bib
+++ b/paper/Poissons.bib
@@ -1,3 +1,20 @@
+@Book{Zaslavsky,
+ Author = {Zaslavsky, Thomas},
+ Title = {Facing up to arrangements: {Face}-count formulas for partitions of space by hyperplanes},
+ FSeries = {Memoirs of the American Mathematical Society},
+ Series = {Mem. Am. Math. Soc.},
+ ISSN = {0065-9266},
+ Volume = {154},
+ ISBN = {978-0-8218-1854-1; 978-0-8218-9955-7},
+ Year = {1975},
+ Publisher = {Providence, RI: American Mathematical Society (AMS)},
+ Language = {English},
+ DOI = {10.1090/memo/0154},
+ Keywords = {51M20,05B35,05A15},
+ zbMATH = {3464406},
+ Zbl = {0296.50010}
+}
+
 @Article{CKSS04,
  Author = {Cho, Manwon and Kim, Dongsu and Seo, Seunghyun and Shin, Heesung},
  Title = {Colored {Pr{\"u}fer} codes for {{\(k\)}}-edge colored trees},
