--- a/paper/Poissons.tex
+++ b/paper/Poissons.tex
@@ -23,6 +23,7 @@
 \author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
 \address{Institut Montpelli\'erain Alexander Grothendieck, Universit\'e de Montpellier, France}
 \email{berenice.delcroix-oger@umontpellier.fr}
+\urladdr{\url{https://oger.perso.math.cnrs.fr/}}
 
 \author[M. Josuat-Verg\`es]{Matthieu Josuat-Verg\`es}
 \address{}
@@ -32,7 +33,7 @@
 \address{School of Mathematics and Statistics, The University of Melbourne, Victoria, Australia}
 \email{guillaume.laplanteanfossi@unimelb.edu.au}
 
-\author{Vincent Pilaud}
+\author[V. Pilaud]{Vincent Pilaud}
 \address[Vincent Pilaud]{CNRS \& LIX, \'Ecole Polytechnique, Palaiseau}
 \email{vincent.pilaud@lix.polytechnique.fr}
 \urladdr{\url{http://www.lix.polytechnique.fr/~pilaud/}}
