--- a/paper/sec/introduction.tex
+++ b/paper/sec/introduction.tex
@@ -14,8 +14,20 @@ The reader who reads the entire article will start feeling the essence of what c
 
 \subsection*{Combinatorics}
 
-We study the $f$-vector of generically translated copies of the braid arrangement... 
-We use Zaslavsky's Theorem...
+The purpose of the first part of this article is to study the combinatorics of the cellular diagonal of the permutohedra, explained in more details in the second part of the introduction.
+ To make this part more accessible to non-algebraists, we formulate it in terms of hyperplane arrangements, as \emph{faces} of the cellular diagonal are in bijection with \emph{regions} of the associated hyperplane arrangements. 
+ The hyperplane arrangement associated with  the cellular diagonal is two generically translated copied of the braid arrangement. 
+ Motivated by the beautiful combinatorial formula obtained in our study, we generalize it to the study of $\ell$ generically translated copies of the braid arrangement, which would algebraically corresponds to some cellular $\ell$-gonal.
+  We compute the $f$-vector and the $b$-vector of $\ell$-generically translated copies of the braid arrangement, using Zaslavsky's Theorem. 
+  We refine the enumeration of the vertices of the hyperplane arrangement using a combinatorial interpretation in terms of $(\ell, n)$-trees and get the following multiplicative formula:
+\begin{theorem}
+The number of vertices of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ (or equivalently of $(\ell,n)$-trees) is
+\[
+f_0(\lBraidArrangement) = \ell \big( (\ell-1) n + 1)^{n-2}.
+\]
+\end{theorem}
+We end this combinatorial section with a conjecture on edge-colored trees.
+
 
 \subsection*{Higher Algebra}
 
