--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -249,6 +249,7 @@ The same holds when taking the~$\circ_i^\SU$ operations instead of the $\circ_i^
 \end{definition}
 
 \begin{proposition}
+    \label{thm:top-iso}
     The map $\Psi:=\{\Psi_t\}$ is an isomorphism of topological cellular symmetric colored operad in the category $\PolySub$.
 \end{proposition}
 
@@ -268,12 +269,23 @@ The same holds when taking the~$\circ_i^\SU$ operations instead of the $\circ_i^
     \end{tikzcd}
     }}\]
     For two interior points $(x,y) \in \mathring P_{t'}\times \mathring P_{t''}$, the diagram clearly commutes by definition, since $\Psi_{t'}$ $\Psi_{t''}$ are the identity in that case. 
-    If $x$ is in a face $F=t_1 \circ_{i_1} t_2 \circ_{i_2} \cdots \circ_{i_k} t_{k+1}$ of the boundary of $P_{t'}$, then the lower composite is equal to $\circ_i^\SU (\circ_{i_1}^\SU \circ_{i_2}^\SU \cdots \circ_{i_k}^\SU \times \id)(\circ_{i_1}^\LA \circ_{i_2}^\LA \cdots \circ_{i_k}^\LA \times \id)^{-1}$, and so is the upper composite since $\Psi_t$ starts with the inverse $(\circ_i^\LA)^{-1}$ and the decomposition of $F$ unto $P_{t_1} \times \cdots P_{t_{k+1}} \times P_{t''}$ is unique.
+    If $x$ is in a face $F=t_1 \circ_{i_1} t_2 \circ_{i_2} \cdots \circ_{i_k} t_{k+1}$ of the boundary of $P_{t'}$, then the lower composite is equal to $\circ_i^\SU (\circ_{i_1}^\SU \circ_{i_2}^\SU \cdots \circ_{i_k}^\SU \times \id)(\circ_{i_1}^\LA \circ_{i_2}^\LA \cdots \circ_{i_k}^\LA \times \id)^{-1}$, and so is the upper composite since $\Psi_t$ starts with the inverse $(\circ_i^\LA)^{-1}$ and the decomposition of $F$ unto $P_{t_1} \times \cdots \times P_{t_{k+1}} \times P_{t''}$ is unique.
     The case when $y$ is in the boundary of $P_{t''}$ is similar.  
     Finally, the compatibility of $\Psi$ with units and the symmetric group actions are straightfoward to check, see \cite[Def. 4.17 and Thm 4.18]{LA21}.
 \end{proof}
 
-\Guillaume{Unpack what this isomorphism is at the cellular level!!}
+Note that $\Psi$ is \emph{not} a morphism of ``Hopf" operads, i.e. it does not commute with the respective diagonals $\LAD$ and $\SUD$. 
+\Guillaume{Give explicit counterexample}
+
+\begin{corollary}
+    The four topological operad structures on the operahedra are all isomorphic. 
+\end{corollary}
+
+\begin{proof}
+    It is clear that the proof of \cref{thm:top-iso} does not depend on the specific choices of diagonals $\LAD$ and $\SUD$, it can therefore be applied to any pair of diagonals among $\LA, \LA^\op, \SU$ and $\SU^\op$. 
+\end{proof}
+
+\Guillaume{Find an iso which commutes??}
 
 \begin{example}
     This isomorphism is a highly non-trivial map. 
