ajout de deux références bibliographiques

--- a/paper/Poissons.bib
+++ b/paper/Poissons.bib
@@ -1,3 +1,33 @@
+@Article{Rota,
+ Author = {Rota, Gian-Carlo},
+ Title = {On the foundations of combinatorial theory. {I}: {Theory} of {M{\"o}bius} functions},
+ FJournal = {Zeitschrift f{\"u}r Wahrscheinlichkeitstheorie und Verwandte Gebiete},
+ Journal = {Z. Wahrscheinlichkeitstheor. Verw. Geb.},
+ ISSN = {0044-3719},
+ Volume = {2},
+ Pages = {340--368},
+ Year = {1964},
+ Language = {English},
+ DOI = {10.1007/BF00531932},
+ Keywords = {06A07,05A15},
+ zbMATH = {3195424},
+ Zbl = {0121.02406}
+}
+
+@InCollection{Birkhoff,
+ Author = {Birkhoff, Garrett},
+ Title = {Lattices and their applications},
+ BookTitle = {Lattice theory and its applications. In celebration of Garrett Birkhoff's 80th birthday},
+ ISBN = {3-88538-223-7},
+ Pages = {7--25},
+ Year = {1995},
+ Publisher = {Lemgo: Heldermann Verlag},
+ Language = {English},
+ Keywords = {06-03,01A60,01A65},
+ zbMATH = {802710},
+ Zbl = {0843.06001}
+}
+
 @Book{Zaslavsky,
  Author = {Zaslavsky, Thomas},
  Title = {Facing up to arrangements: {Face}-count formulas for partitions of space by hyperplanes},
