Fin du premier passage sur la partie 1

--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -36,7 +36,7 @@
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 
-\newtheorem{conjectue}{Conjecture} 
+\newtheorem{conjecture}{Conjecture} 
 \newtheorem{problem}{Problem}
 \newtheorem{ex}[theorem]{Examples}
 \newtheorem{example}[theorem]{Example}
